--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to Alex Frosts Personal Website</h1>
     <table cellspacing="20">
         <td>
-            <img src="cv/Images/Display Pic.PNG" 
+            <img src="Images/Display Pic.PNG" 
             alt="Display Pic" 
             width="123"
             height="138"
